# amplitude

./: .gitignore  LIMITS.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
amplitude/: __init__.py  test_amplitude.py
tests/: test_amplitude.py
