[tool.poetry]
name = "amplitude"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
testtools = "^2.4.0"
requests-mock = "^1.8.0"
nose = "^1.3.7"
black = "^20.8b1"
isort = "^5.7.0"
pytest = "^6.2.2"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
